# tiago_custom_dev

./: .gitignore
src/launch_pal/: CHANGELOG.rst  README.md  package.xml  setup.cfg  setup.py
src/launch_pal/config/: robot_configuration.yaml
src/launch_pal/launch_pal/: __init__.py  arg_utils.py  calibration_utils.py  composition_utils.py  include_utils.py  logging_utils.py  pal_parameters.py  param_utils.py  robot_utils.py
src/launch_pal/launch_pal/actions/: __init__.py  check_public_sim.py  validate_launch_args.py  validate_xacro_args.py
src/launch_pal/launch_pal/conditions/: __init__.py  if_node_running.py  unless_node_running.py
src/launch_pal/launch_pal/robot_arguments/: __init__.py  common.py  robot.py
src/launch_pal/launch_pal/substitutions/: __init__.py  concat_substitution.py  load_file.py  robot_info_file.py
src/launch_pal/test/: other_parametric.yaml  parametric.yaml  test_calibration.py  test_include_utils.py  test_node_running_condition.py  test_pal_parameters.py  test_param_utils.py  test_robot_info_file_substitution.py
src/launch_pal/test/mock_calibration_template/: mock_calibration.urdf.xacro  mock_calibration.urdf.xacro.j2
src/launch_pal/test/mock_rosroot_pal_parameters/share/test_node/: 00-defaults.yml  01-base-cfg.yml  preset.yml
src/pal_gripper/pal_gripper_simulation/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/pal_gripper/pal_gripper_simulation/launch/: gazebo.launch.py  gripper_spawn.launch.py  robot_state_publisher.launch.py
src/pal_urdf_utils/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/pal_urdf_utils/meshes/ft_sensors/: ati_ft_sensor.stl  rokubi_ft_sensor.stl
src/pal_urdf_utils/urdf/: deg_to_rad.urdf.xacro  materials.urdf.xacro  pi.urdf.xacro
src/pal_urdf_utils/urdf/camera/: OS1-64.urdf.xacro  elp_rgb.gazebo.xacro  elp_rgb.urdf.xacro  imx179_camera.gazebo.xacro  openni.gazebo.xacro  orbbec_astra.urdf.xacro  orbbec_astra_pro.urdf.xacro  realsense_d435.gazebo.xacro  realsense_d435.urdf.xacro  realsense_d435i.gazebo.xacro  realsense_d435i.urdf.xacro  realsense_d455.gazebo.xacro  realsense_d455.urdf.xacro  realsense_t265.gazebo.xacro  realsense_t265.urdf.xacro  rpi_camera.gazebo.xacro  structure_sensor.gazebo.xacro  structure_sensor.urdf.xacro  xtion_pro_live.urdf.xacro
src/pal_urdf_utils/urdf/ft_sensors/: ati.urdf.xacro  ati_talos.gazebo.xacro  ati_talos.urdf.xacro  ft_sensor.gazebo.xacro  ft_sensor.urdf.xacro  ftsensor.ros2_control.xacro  rokubi.urdf.xacro  schunk.gazebo.xacro  schunk.urdf.xacro
src/pal_urdf_utils/urdf/interaction_sensors/: imu.gazebo.xacro  imu.urdf.xacro  imu_sensors.ros2_control.xacro  imu_talos.gazebo.xacro  microphone.urdf.xacro
src/pal_urdf_utils/urdf/laser/: hokuyo_urg_04lx_ug01_laser.gazebo.xacro  hokuyo_urg_04lx_ug01_laser.urdf.xacro  range.gazebo.xacro  range.urdf.xacro  sick_nanoscan3_laser.gazebo.xacro  sick_nanoscan3_laser.urdf.xacro  sick_tim551_laser.gazebo.xacro  sick_tim551_laser.urdf.xacro  sick_tim561_laser.gazebo.xacro  sick_tim561_laser.urdf.xacro  sick_tim571_laser.gazebo.xacro  sick_tim571_laser.urdf.xacro  ydlidar_tg15_laser.gazebo.xacro  ydlidar_tg15_laser.urdf.xacro  ydlidar_tg30_laser.gazebo.xacro  ydlidar_tg30_laser.urdf.xacro
src/play_motion2/: CMakeLists.txt  package.xml
src/pmb2_navigation/pmb2_2dnav/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/pmb2_navigation/pmb2_2dnav/config/: nav2_analyzers.yaml
src/pmb2_navigation/pmb2_2dnav/config/rviz/: navigation.rviz
src/pmb2_navigation/pmb2_2dnav/launch/: localization.launch.py  navigation.launch.py  slam.launch.py
src/pmb2_navigation/pmb2_2dnav/module/: 00_localization.yaml  00_navigation.yaml  00_slam.yaml
src/pmb2_navigation/pmb2_2dnav/params/: 10_nav2_controller_pmb2.yaml  10_nav2_lifecycle_manager_2dnav_pmb2.yaml  10_nav2_planner_pmb2.yaml
src/pmb2_navigation/pmb2_laser_sensors/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/pmb2_navigation/pmb2_laser_sensors/config/: laser_analyzers.yaml
src/pmb2_navigation/pmb2_laser_sensors/launch/: laser_hokuyo.launch.py  laser_sick-571.launch.py  laser_sim.launch.py
src/pmb2_navigation/pmb2_laser_sensors/module/: 10_laser.yaml
src/pmb2_navigation/pmb2_laser_sensors/params/: 10_laser_hokuyo_pmb2.yaml  10_laser_sick-561_pmb2.yaml  10_laser_sick-571_pmb2.yaml  10_nav2_lifecycle_manager_laser_hokuyo_pmb2.yaml  10_nav2_lifecycle_manager_laser_sick-561_pmb2.yaml  10_nav2_lifecycle_manager_laser_sick-571_pmb2.yaml  10_nav2_lifecycle_manager_laser_sim_pmb2.yaml  10_pal_laser_filters_pmb2.yaml
src/pmb2_navigation/pmb2_rgbd_sensors/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/pmb2_navigation/pmb2_rgbd_sensors/config/: rgbd_analyzers.yaml
src/pmb2_navigation/pmb2_rgbd_sensors/launch/: rgbd_cobra_realsense-d435.launch.py  rgbd_cobra_structure.launch.py
src/pmb2_navigation/pmb2_rgbd_sensors/module/: 10_rgbd.yaml
src/pmb2_navigation/pmb2_rgbd_sensors/params/: 00_rgbd_cobra_realsense-d435_pmb2.yaml  00_rgbd_cobra_realsense-d435i_pmb2.yaml  00_rgbd_cobra_structure_pmb2.yaml
src/tiago_navigation/tiago_2dnav/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/tiago_navigation/tiago_2dnav/module/: 40_localization.yaml  40_navigation.yaml  40_slam.yaml
src/tiago_navigation/tiago_laser_sensors/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/tiago_navigation/tiago_laser_sensors/module/: 40_laser.yaml
src/tiago_navigation/tiago_rgbd_sensors/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/tiago_navigation/tiago_rgbd_sensors/module/: 40_rgbd.yaml
src/tiago_navigation/tiago_rgbd_sensors/params/: 40_astra_camera_cfg_tiago.yaml
src/tiago_simulation/tiago_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/tiago_simulation/tiago_gazebo/launch/: tiago_gazebo.launch.py
src/tiago_simulation/tiago_gazebo/test/: tuck_arm_test.cpp
src/urdf_test/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
src/urdf_test/models/cabinet/: cabinet.urdf
src/urdf_test/models/server/: server.urdf
src/urdf_test/scripts/: test_urdf.py
src/urdf_test/tests/: test_xacro_test.py
src/urdf_test/urdf_test/: description_test.py  xacro_test.py
(+186 files in other folders)
