<?xml version="1.0"?>
<package format="3">
  <name>pal_urdf_utils</name>
  <version>2.3.4</version>
  <description>This package contains the color materials of common elements of PAL Robotics' robot.
      The files in this package are parsed and used by
      a variety of other components.  Most users will not interact directly
      with this package.</description>
  <maintainer email="thomas.peyrucain@pal-robotics.com">Thomas Peyrucain</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://github.com/pal-robotics/pal_urdf_utils</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
