<?xml version="1.0"?>
<package format="3">
  <name>play_motion2</name>
  <version>0.0.0</version>
  <description>Empty meta package to bypass play_motion2 dependency check for Tiago public sim</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ament_index_python</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
