<?xml version="1.0"?>
<package format="3">
  <name>pal_gripper_simulation</name>
  <version>3.6.1</version>
  <description>Pal gripper simulation package</description>
  <maintainer email="aina.irisarri@pal-robotics.com">Aina Irisarri</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>pal_urdf_utils</exec_depend>
  <exec_depend>pal_gazebo_worlds</exec_depend>
  <exec_depend>pal_gripper_controller_configuration</exec_depend>
  <exec_depend>pal_gripper_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
